--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MYSQLDB_ROOT_PASSWORD = password
-MYSQLDB_USER = username
-MYSQLDB_PASSWORD = password
+MYSQLDB_ROOT_PASSWORD = root
+MYSQLDB_USER = root
+MYSQLDB_PASSWORD = root
 MYSQLDB_DATABASE = test
