--- a/api/package.json
+++ b/api/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "api_material",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "npm start",
     "proxy": "http://localhost:3000"
   },
@@ -18,7 +18,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^2.3.3"
+    "mocha": "^10.1.0",
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
+    "supertest": "^6.3.1"
   }
 }
