--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       DB_HOST: mysql://db:3306
     ports:
-      - "3000:3000"
+      - 3000:3000
     networks:
       - frontend  
   api:
@@ -21,26 +21,25 @@ services:
     depends_on:
       - db
     ports:
-      - "3001:3001"
+      - 3001:3001
     networks:
       - backend
       - frontend  
   db:
     image: mysql:8
-    # command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
     environment:
         MYSQL_DATABASE: 'test'
         MYSQL_ROOT_PASSWORD: 'root'
     ports:
-      - "3306:3306"
+      - 3306:3306
     volumes:
       - db-data:/var/lib/mysql
       - ./database:/docker-entrypoint-initdb.d
     networks:
       - backend
   adminer:
-    image: adminer
+    image: adminer:4.8.1
     restart: always
     ports:
       - 8080:8080
@@ -52,4 +51,4 @@ volumes:
   db-data:
 networks:
   backend:
-  # frontend:
+  frontend:
