--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "npm start",
-    "proxy": "http://localhost:3000"
+    "start": "npm start"
   },
   "keywords": [
     "nodejs",
