--- a/api/package.json
+++ b/api/package.json
@@ -2,10 +2,10 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "npm start"
+    "start": "npm start",
+    "proxy": "https://fabien.iamroot.fr"
   },
   "keywords": [
     "nodejs",
