--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "npm start"
+    "start": "npm start",
+    "proxy": "http://localhost:3000"
   },
   "keywords": [
     "nodejs",
