--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   app:
     build: 
+      context: .
       dockerfile: Dockerfile.app
     working_dir: /app
     command: npm start
@@ -15,6 +16,7 @@ services:
       - frontend  
   api:
     build:
+      context: .
       dockerfile: Dockerfile.api
     working_dir: /api
     command: bash -c 'while !</dev/tcp/db/3306; do sleep 1; done; node index.js'
