--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
-API_URL = http://localhost:3001
+API_URL = https://fabien.iamroot.fr/server
 
-MYSQLDB_ROOT_PASSWORD = root
-MYSQLDB_USER = root
-MYSQLDB_PASSWORD = root
-MYSQLDB_DATABASE = test
+MYSQLDB_HOST = db
+
+MYSQLDB_ROOT_PASSWORD = dr0wss4p
+MYSQLDB_USER = emanresu
+MYSQLDB_PASSWORD = dr0wss4p
+MYSQLDB_DATABASE = lend_nws
+
+MYSQLDB_PORT = 3306
