Update path route on config.js

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
     container_name: api
     working_dir: /api
     command: node index.js
+    restart: unless-stopped
     depends_on:
       db:
         condition: service_healthy
