--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha",
     "start": "npm start",
-    "proxy": "http://localhost:3000"
+    "proxy": "https://fabien.iamroot.fr/"
   },
   "keywords": [
     "nodejs",
