--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,10 @@ services:
   app:
     build: 
       context: .
-      dockerfile: Dockerfile.app
+      target: app
     container_name: app
     working_dir: /app
-    command: npm start
+    # command: npm start
     depends_on:
       - db
     environment:
@@ -34,10 +34,10 @@ services:
   api:
     build:
       context: .
-      dockerfile: Dockerfile.api
+      target: api
     container_name: api
     working_dir: /api
-    command: node index.js
+    # command: node index.js
     restart: unless-stopped
     depends_on:
       db:
