--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,10 +8,10 @@ jobs:
     steps:
       - run: |
           mkdir -p ~/.ssh
-          ssh-keyscan {{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
           chmod 644 ~/.ssh/known_hosts
       - uses: webfactory/ssh-agent@v0.5.4
         with:
           ssh-private-key: ${{ secrets.SSH_KEY }}
       - run: |
-          ssh {{ secrets.SSH_USER }}@{{ secrets.SSH_HOST }} "ls"
+          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "ls"
