--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,4 +14,4 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_KEY }}
       - run: 
-          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker compose pull -f && docker-compose down && docker-compose up -d && docker system prune -a -f"
+          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker compose pull && docker-compose down && docker-compose up -d && docker system prune -a -f"
