--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,8 @@ on: [push]
 name: Build image & Test
 
 jobs:
-  test: Testing my api
+  test:
+    - name: Testing my api
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
