--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,11 +14,14 @@ jobs:
         with:
           node-version: '14'
       - name: Moove on api folder
-        run: cd api
-      - name: Install dependencies
-        run: npm install
-      - name: Run tests
-        run: npm test api/test/test.js
+        run: |
+          cd api
+          npm install
+          npm test test/test.js
+      # - name: Install dependencies
+      #   run: npm install
+      # - name: Run tests
+      #   run: npm test api/test/test.js
 
   build-docker:
     runs-on: ubuntu-latest
