--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,29 +4,41 @@ name: Build image & Test
 
 jobs:
   test:
-    name: Testing my api with docker compose
+    name: Testing my api
     runs-on: ubuntu-latest
+    
+    # Testing my nodejs api
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Run docker-compose
-        run: docker-compose up -d
-      - name: Test
-        run: |
-          docker-compose exec mat-api npm run test test/test.js
-      - name: Stop docker-compose
-        run: docker-compose down
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm install
+      - name: Run tests
+        run: npm test test/test.js
+      - name: Build image
+        run: docker build -t my-api .
+      - name: Run image
+        run: docker run -d -p 3001:3001 my-api
+      - name: Test image
+        run: curl http://localhost:3000
 
-      # - name: Checkout
-      #   uses: actions/checkout@v3
-      # - name: Setup Docker compose
-      #   uses: docker-practice/actions-setup-docker-compose@master
-      # - name: Build image
-      #   run: docker-compose up -d
-      # - name: Test my api
-      #   run: |
-      #     docker-compose exec mat-api
-      #     npm test test/test.js
+    # steps:
+    #   - name: Checkout
+    #     uses: actions/checkout@v3
+    #   - name: Run docker-compose
+    #     run: docker-compose up -d
+    #   - name: Test
+    #     run: |
+    #       docker-compose exec mat-api npm run test test/test.js
+    #   - name: Stop docker-compose
+    #     run: docker-compose down
+
+
 
   build-docker:
     runs-on: ubuntu-latest
