--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          repository: 'my-api'
+          repository: 'fabienlpt/material'
           path: 'api'
       - name: Setup Node.js
         uses: actions/setup-node@v3
