--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,14 +6,11 @@ jobs:
   test:
     name: Testing my api
     runs-on: ubuntu-latest
-
-    # Testing my nodejs api
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          repository: 'fabienlpt/material'
-          path: 'api'
+          path: api
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
