--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          path: api
+          path: ../api
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
