--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,11 +12,11 @@ jobs:
         with:
           path: api
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v1
         with:
-          node-version: 16
+          node-version: 12.x
       - name: Install dependencies
-        run: npm install
+        run: npm ci
         working-directory: api
       - name: Run tests
         run: npm test test/test.js
@@ -41,7 +41,7 @@ jobs:
     #       docker-compose exec mat-api npm run test test/test.js
     #   - name: Stop docker-compose
     #     run: docker-compose down
-    
+
   build-docker:
     runs-on: ubuntu-latest
     steps:
