--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ API_URL = https://fabien.iamroot.fr/server
 
 MYSQLDB_HOST = db
 
-MYSQLDB_ROOT_PASSWORD = dr0wss4p
-MYSQLDB_USER = emanresu
-MYSQLDB_PASSWORD = dr0wss4p
+MYSQLDB_ROOT_PASSWORD = pass
+MYSQLDB_USER = user
+MYSQLDB_PASSWORD = pass
 MYSQLDB_DATABASE = lend_nws
 
 MYSQLDB_PORT = 3306
