--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     container_name: db
     environment:
       MYSQL_DATABASE: 'lend_nws'
-      MYSQL_ROOT_PASSWORD: 'root'
+      MYSQL_USER: 'user'
+      MYSQL_PASSWORD: 'pass'
     ports:
       - 3306:3306
     volumes:
