--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,29 +7,14 @@ jobs:
     name: Testing my api
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
         uses: actions/checkout@v3
+        uses: actions/setup-node@v3
         with:
-          path: api
-      - name: Setup Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
+          node-version: 18
       - name: Install dependencies
-        run: npm ci
-        working-directory: api
+        run: cd api && npm install
       - name: Run tests
-        run: npm test test/test.js
-        working-directory: api
-      - name: Build image
-        run: docker build -t my-api .
-        working-directory: api
-      - name: Run image
-        run: docker run -d -p 3001:3001 my-api
-        working-directory: api
-      - name: Test image
-        run: curl http://localhost:3000
-        working-directory: api
+        run: npm run test test/test.js
 
     # steps:
     #   - name: Checkout
