--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ on: [push]
 name: Build image & Test
 
 jobs:
-  test:
+  Test-api:
     name: Testing my api
     runs-on: ubuntu-latest
     steps:
