--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,9 +7,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: latest
-        run: cd api && npm install
-        run: npm run test test/test.js
+          node-version: 18
+      - run: cd api && npm i
+      - run: npm run test test/test.js
 
     # steps:
     #   - name: Checkout
