--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,14 +1,15 @@
 on: [push]
 
 jobs:
-  Test_code:
+    Test-api:
+    name: Test API with docker-compose
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - run: cd api && npm i && npm run test
+      - run: docker-compose up -d
+      - run: docker exec -it api npm i && npm run test
+      - run: docker-compose down
+
 
   build-docker:
     runs-on: ubuntu-latest
