--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker-compose up -d
-      - run: docker exec -it api npm i && npm run test
+      - run: docker exec api npm run test
       - run: docker-compose down
 
 
